<resources>
    <string name="app_name">Pinefruit</string>
    <string name="permission">You need to give some mandatory permissions to continue. Do you want to give permission?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="facility_hint">Business Name</string>
    <string name="facility_label">Facility Name</string>
    <string name="service_hint">Service Name</string>
    <string name="service_label">Service Name</string>
    <string name="provider">Provider</string>
    <string name="provider_hint">Provider Name</string>
    <string name="From_time">Start Time</string>
    <string name="To_time">End Time</string>
    <string name="publish">Confirm</string>
    <string name="Save">Save</string>
    <string name="Modify">Modify</string>
    <string name="Cancel">Cancel</string>
    <string name="proceed">Schedule my Queue</string>
    <string name="movetosession">Create Service</string>
    <string name="fronttext">Service Information</string>
    <string name="confrimlabel">Service Confirmation</string>
    <string name="booksuccess">Success !!! \nVerify your service information and share with your contacts to take bookings !!! \n</string>
    <string name="viewbtnlabel">Manage Queue</string>
    <string name="createbtnlabel">Create New</string>
    <string name="title_menu_list">Items</string>
    <string name="title_menu_detail">Menu Detail</string>
    <string name="title_sessionlist_list">Sessions</string>
    <string name="title_sessionlist_detail">SessionList Detail</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="choose_location">Choose Location</string>
    <string name="service_creation">Let your customers know where the service is provided?</string>
    <string name="session_creation">Let your customers know about \n\nwhat service you provide.
        \nExample "General Physician", "Orthopedic", "Road Test" - etc.,
        \n\nWho provides it.\nExample "Dr.Abc", "Security Officer","YourName" - etc.,?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
