<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScheduleActivity">

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/from"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/rounded_button"
            android:drawableStart="@drawable/ic_access_time_black_24dp"
            android:drawableLeft="@drawable/ic_access_time_black_24dp"
            android:hint="@string/From_time"
            android:text="@string/From_time"
            android:textAlignment="center" />

        <Button
            android:id="@+id/to"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/rounded_button"
            android:drawableStart="@drawable/ic_access_time_black_24dp"
            android:drawableLeft="@drawable/ic_access_time_black_24dp"
            android:hint="@string/To_time"
            android:text="@string/To_time"
            android:textAlignment="center" />

        <CalendarView
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="72dp" />

    </LinearLayout>

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginLeft="75dp"
        android:text="@string/Save"
        app:layout_constraintBaseline_toBaselineOf="@+id/publish"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/publish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="102dp"
        android:layout_marginRight="102dp"
        android:layout_marginBottom="64dp"
        android:text="@string/publish"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>