<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ccddff"
        tools:context=".ProviderInfoActivity">

    <EditText
        android:id="@+id/facilityName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints="@string/facility_hint"
        android:ems="10"
        android:hint="@string/facility_hint"
        android:inputType="text"
        android:textAlignment="center"
        android:drawableLeft="@drawable/ic_baseline_business_24"
        android:drawablePadding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/proType"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:id="@+id/providerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/provider_hint"
        android:inputType="text"
        android:drawableLeft="@drawable/ic_baseline_person_24"
        android:drawablePadding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/serviceName"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:id="@+id/serviceName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/service_hint"
        android:drawableLeft="@drawable/ic_baseline_notes_24"
        android:inputType="text"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choseLocation"
        android:gravity="center_horizontal" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/service_creation"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/proceed"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:background="@drawable/rounded_button"
        android:text="@string/proceed"
        android:drawableLeft="@drawable/ic_baseline_schedule_24"
        android:drawablePadding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/providerName"
        tools:visibility="visible" />

    <Spinner
        android:id="@+id/proType"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginTop="30dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
         />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="#fefefe"
        app:menu="@menu/navbar" />

    <Button
        android:id="@+id/choseLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:drawableLeft="@drawable/ic_baseline_add_location_24"
        android:drawablePadding="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/choose_location"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/rounded_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/facilityName"
        android:paddingStart="10dp"
        android:paddingEnd="10dp
" />

</androidx.constraintlayout.widget.ConstraintLayout>