<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
        tools:context=".ProviderOrgInfoActivity"
    tools:ignore="MissingDefaultResource">

    <EditText
        android:id="@+id/providerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/provider_hint"
        android:inputType="text"
        android:drawableLeft="@drawable/ic_baseline_person_24"
        android:drawablePadding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/serviceName"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:id="@+id/serviceName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:drawableLeft="@drawable/ic_baseline_notes_24"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/service_hint"
        android:inputType="text"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sessioninfopagelable" />

    <TextView
        android:id="@+id/sessioninfopagelable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/session_creation"
        android:textColor="#000000"
        android:textSize="20sp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/proceed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/rounded_button"
        android:drawableLeft="@drawable/ic_baseline_schedule_24"
        android:drawablePadding="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/proceed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/providerName"
        tools:visibility="visible" />


</androidx.constraintlayout.widget.ConstraintLayout>