<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
        tools:context=".ProviderOrgInfoActivity">

    <EditText
        android:id="@+id/providerOrg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:autofillHints="@string/facility_hint"
        android:drawableLeft="@drawable/ic_baseline_business_24"
        android:drawablePadding="20dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/facility_hint"
        android:inputType="text"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/proType" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/service_creation"
        android:textColor="@color/colorPrimary"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_gravity="center_horizontal" />

    <Button
        android:id="@+id/proceed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/rounded_button"
        android:drawableLeft="@drawable/ic_baseline_schedule_24"
        android:drawablePadding="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/movetosession"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choseLocation"
        tools:visibility="visible" />


    <Spinner
        android:id="@+id/proType"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="70dp"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/choseLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/rounded_button"
        android:drawableLeft="@drawable/ic_baseline_add_location_24"
        android:drawablePadding="10dp"
        android:paddingStart="10dp"
        android:paddingLeft="20dp"
        android:paddingEnd="10dp
"
        android:paddingRight="20dp"
        android:text="@string/choose_location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/providerOrg" />

</androidx.constraintlayout.widget.ConstraintLayout>